// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: CustomButton should match snapshot 1`] = `
<View
  collapsable={false}
  style={
    [
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 4,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
        "bottom": undefined,
        "flex": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": 12,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginTop": undefined,
        "overflow": "hidden",
        "position": undefined,
        "right": undefined,
        "top": undefined,
      },
      {},
      {},
    ]
  }
>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        [
          {
            "justifyContent": "center",
            "paddingHorizontal": 16,
            "paddingVertical": 14,
          },
          {
            "borderRadius": 4,
            "marginBottom": 12,
          },
          {
            "backgroundColor": "purple",
          },
          {},
          {
            "padding": 10,
          },
        ],
        {
          "borderRadius": 0,
          "marginBottom": 0,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="testButton"
  >
    <Text
      style={
        [
          {
            "color": "yellow",
            "fontSize": 18,
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontWeight": "500",
            "textAlign": "center",
          },
          [
            {
              "textAlign": "left",
            },
          ],
        ]
      }
    >
      Press me!
    </Text>
  </View>
</View>
`;

exports[`Story Snapshots: DisabledButton should match snapshot 1`] = `
<View
  collapsable={false}
  style={
    [
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 4,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
        "bottom": undefined,
        "flex": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": 12,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginTop": undefined,
        "overflow": "hidden",
        "position": undefined,
        "right": undefined,
        "top": undefined,
      },
      {},
      {},
    ]
  }
>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        [
          {
            "justifyContent": "center",
            "paddingHorizontal": 16,
            "paddingVertical": 14,
          },
          {
            "borderRadius": 4,
            "marginBottom": 12,
          },
          {
            "backgroundColor": "#D1EBFE",
          },
          {},
          undefined,
        ],
        {
          "borderRadius": 0,
          "marginBottom": 0,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="testButton"
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontSize": 16,
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontWeight": "500",
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Press me!
    </Text>
  </View>
</View>
`;

exports[`Story Snapshots: DisabledLoadingButton should match snapshot 1`] = `
<View
  collapsable={false}
  style={
    [
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 4,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
        "bottom": undefined,
        "flex": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": 12,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginTop": undefined,
        "overflow": "hidden",
        "position": undefined,
        "right": undefined,
        "top": undefined,
      },
      {},
      {},
    ]
  }
>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        [
          {
            "justifyContent": "center",
            "paddingHorizontal": 16,
            "paddingVertical": 14,
          },
          {
            "borderRadius": 4,
            "marginBottom": 12,
          },
          {
            "backgroundColor": "#D1EBFE",
          },
          {},
          undefined,
        ],
        {
          "borderRadius": 0,
          "marginBottom": 0,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="testButton"
  >
    <ActivityIndicator
      color="#FFFFFF"
      style={
        {
          "padding": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`Story Snapshots: LoadingButton should match snapshot 1`] = `
<View
  collapsable={false}
  style={
    [
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 4,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
        "bottom": undefined,
        "flex": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": 12,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginTop": undefined,
        "overflow": "hidden",
        "position": undefined,
        "right": undefined,
        "top": undefined,
      },
      {},
      {},
    ]
  }
>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        [
          {
            "justifyContent": "center",
            "paddingHorizontal": 16,
            "paddingVertical": 14,
          },
          {
            "borderRadius": 4,
            "marginBottom": 12,
          },
          {
            "backgroundColor": "#D1EBFE",
          },
          {},
          undefined,
        ],
        {
          "borderRadius": 0,
          "marginBottom": 0,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="testButton"
  >
    <ActivityIndicator
      color="#FFFFFF"
      style={
        {
          "padding": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`Story Snapshots: PrimaryButton should match snapshot 1`] = `
<View
  collapsable={false}
  style={
    [
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 4,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
        "bottom": undefined,
        "flex": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": 12,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginTop": undefined,
        "overflow": "hidden",
        "position": undefined,
        "right": undefined,
        "top": undefined,
      },
      {},
      {},
    ]
  }
>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        [
          {
            "justifyContent": "center",
            "paddingHorizontal": 16,
            "paddingVertical": 14,
          },
          {
            "borderRadius": 4,
            "marginBottom": 12,
          },
          {
            "backgroundColor": "#156FF5",
          },
          {},
          undefined,
        ],
        {
          "borderRadius": 0,
          "marginBottom": 0,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="testButton"
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontSize": 16,
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontWeight": "500",
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Press me!
    </Text>
  </View>
</View>
`;

exports[`Story Snapshots: SecondaryButton should match snapshot 1`] = `
<View
  collapsable={false}
  style={
    [
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 4,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
        "bottom": undefined,
        "flex": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": 12,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginTop": undefined,
        "overflow": "hidden",
        "position": undefined,
        "right": undefined,
        "top": undefined,
      },
      {},
      {},
    ]
  }
>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        [
          {
            "justifyContent": "center",
            "paddingHorizontal": 16,
            "paddingVertical": 14,
          },
          {
            "borderRadius": 4,
            "marginBottom": 12,
          },
          {
            "backgroundColor": "#E4E7EA",
          },
          {},
          undefined,
        ],
        {
          "borderRadius": 0,
          "marginBottom": 0,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="testButton"
  >
    <Text
      style={
        [
          {
            "color": "#2F343D",
            "fontSize": 16,
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontWeight": "500",
            "textAlign": "center",
          },
          undefined,
        ]
      }
    >
      Press me!
    </Text>
  </View>
</View>
`;

exports[`Story Snapshots: SmallButton should match snapshot 1`] = `
<View
  collapsable={false}
  style={
    [
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": 4,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
        "bottom": undefined,
        "flex": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": 12,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginTop": undefined,
        "overflow": "hidden",
        "position": undefined,
        "right": undefined,
        "top": undefined,
      },
      {},
      {},
    ]
  }
>
  <View
    accessibilityLabel="Press me!"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        [
          {
            "alignSelf": "center",
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          {
            "borderRadius": 4,
            "marginBottom": 12,
          },
          {
            "backgroundColor": "#156FF5",
          },
          {},
          undefined,
        ],
        {
          "borderRadius": 0,
          "marginBottom": 0,
        },
        {
          "opacity": 1,
        },
      ]
    }
    testID="testButton"
  >
    <Text
      style={
        [
          {
            "color": "#FFFFFF",
            "fontSize": 16,
          },
          {
            "backgroundColor": "transparent",
            "fontFamily": "Inter",
            "fontSize": 12,
            "fontWeight": "700",
            "lineHeight": 18,
            "textAlign": "left",
          },
          undefined,
        ]
      }
    >
      Press me!
    </Text>
  </View>
</View>
`;
